Add gift draw feature with new gift.html and update index.html

--- a/index.html
+++ b/index.html
@@ -86,7 +86,12 @@
                 description: "เครื่องมือคำนวณวันชำระเงิน",
                 url: "calculate-payment-date.html"
             },
-            
+            {
+                name: "จับฉลากของขวัญ",
+                icon: "🎁",
+                description: "ระบบจับฉลากของขวัญแบบ Chain Reaction",
+                url: "gift.html"
+            },
         ];
 
         // Get the grid container
