--- a/gift.html
+++ b/gift.html
@@ -6,10 +6,10 @@
     <title>ระบบจับฉลากของขวัญแบบ Chain Reaction</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;600&display=swap');
+    <style>        
+        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono%7CGoogle+Sans:400,500,600,700');
         body {
-            font-family: 'Kanit', sans-serif;
+            font-family: 'Google Sans', sans-serif;
             background: #f8fafc;
             min-height: 100vh;
         }
